# cmake-modules

./: README.md  builder.cmake  helpers.cmake  maker.cmake
examples/exe/: CMakeLists.txt  build.sh
examples/exe/include/: defines.h
examples/exe/src/: main.cpp
